second day continued

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="root"></div> <!-- where do you want to render the react command-->
-    <script src="script.js" type="text/babel"></script>
+    <script src="script.js"></script>
      <!--added type since we are using babel  -->
 </body>
 </html>
